WIP: install metric reporting daemon

--- a/ansible/roles/finalization/tasks/main.yml
+++ b/ansible/roles/finalization/tasks/main.yml
@@ -15,6 +15,7 @@
     - meryl
     - theresa
     - ct-capacity-daemon
+    - metric-reporting-daemon
     #
     # Other daemons 
     - delayed_job
