--- a/ansible/roles/ganglia/files/gmetad.conf
+++ b/ansible/roles/ganglia/files/gmetad.conf
@@ -56,5 +56,7 @@ data_source "ailsa_local" localhost:8657
 data_source "ct-capacity-daemon_local" localhost:8659
 # vm location daemon
 data_source "ct-hypervisor-daemon_local" localhost:8654
+# User-defined metric injection daemon
+data_source "metric-reporting-daemon_local" localhost:8678
 
 data_source fake_gmond localhost:8677
