--- a/ansible/roles/package-assets/defaults/main.yml
+++ b/ansible/roles/package-assets/defaults/main.yml
@@ -22,4 +22,4 @@ package_assets_appliances:
 package_assets_fake_gmond_tag: main
 
 package_assets_golang_projects:
-  - daemon:metric-reporting-daemon:main
+  - daemon:metric-reporting-daemon:0.2.0
