--- a/ansible/roles/ruby/tasks/main.yml
+++ b/ansible/roles/ruby/tasks/main.yml
@@ -19,6 +19,12 @@
         creates: /opt/{{ item }}
       loop: "{{ ruby_build_assets }}"
 
+- name: Install ruby 3.0
+  ansible.builtin.apt:
+    name:
+      - ruby3.0
+      - ruby3.0-dev
+
 - name: Link Rubies
   ansible.builtin.file:
     src: "{{ item.src }}"
