--- a/ansible/roles/package-daemons/tasks/metric_reporting_daemon_config.yml
+++ b/ansible/roles/package-daemons/tasks/metric_reporting_daemon_config.yml
@@ -33,3 +33,8 @@
         owner: root
         group: "{{app_user}}"
         mode: "640"
+
+- name: Install logrotate configuration
+  ansible.builtin.copy:
+    src: ct-metric-reporting-daemon.logrotate
+    dest: /etc/logrotate.d/ct-metric-reporting-daemon
