--- a/ansible/roles/ct-visualisation-app/tasks/main.yml
+++ b/ansible/roles/ct-visualisation-app/tasks/main.yml
@@ -8,7 +8,7 @@
   include_tasks: install_ct_vis_app_package.yml
   when: ct_vis_app_dir.stdout == ""
 
-- name: Install configuration
+- name: Install logrotate configuration
   ansible.builtin.template:
     src: ct-visualisation-app.logrotate
     dest: /etc/logrotate.d/ct-visualisation-app
