--- a/ansible/roles/package-daemons/files/metric-reporting-daemon.service
+++ b/ansible/roles/package-daemons/files/metric-reporting-daemon.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=Metric Reporting Daemon - Provides HTTP API to allow injecting custom metrics into the metric stream.
+Description=Concertim Metric Reporting Daemon - Provides HTTP API to allow injecting custom metrics into the metric stream.
 
 [Service]
 Type=exec
-ExecStart=/data/private/share/daemons/metric-reporting-daemon/metric-reporting-daemon
+ExecStart=/data/private/share/daemons/ct-metric-reporting-daemon/metric-reporting-daemon
 TimeoutSec=10sec
-StandardOutput=append:/var/log/metric-reporting-daemon.log
-StandardError=append:/var/log/metric-reporting-daemon.log
+StandardOutput=append:/var/log/ct-metric-reporting-daemon.log
+StandardError=append:/var/log/ct-metric-reporting-daemon.log
 
 [Install]
 WantedBy=multi-user.target
