--- a/ansible/tasks/run_rake_task.yml
+++ b/ansible/tasks/run_rake_task.yml
@@ -1,4 +1,4 @@
-- name: Run rake task {{rake_task}} (in {{chdir}})
+- name: Run rake task {{rake_task}}
   ansible.builtin.shell:
     cmd: |
       PATH={{ruby_bin_dir}}:$PATH
