--- a/ansible/roles/ct-visualisation-app/templates/ct-visualisation-app.service
+++ b/ansible/roles/ct-visualisation-app/templates/ct-visualisation-app.service
@@ -1,9 +1,9 @@
 [Unit]
-Description=CT Visualisation App - Web app providing visualiation of metrics
+Description=CT Visualisation App - Web app providing visualisation of metrics
 
 [Service]
 Type=exec
-ExecStart={{ct_vis_app_core_dir}}/bin/rails server -p 7000 -b 0.0.0.0
+ExecStart={{ct_vis_app_core_dir}}/bin/rails server -p 7000 -b 0.0.0.0 -e production
 TimeoutSec=10sec
 StandardOutput=append:{{ct_vis_app_log_file}}
 StandardError=append:{{ct_vis_app_log_file}}
