--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -2,6 +2,7 @@ CODE_PATH = [ ENV['FLIGHT_CODE'], "#{ENV['HOME']}/code" ]
   .compact
   .map { |p| File.expand_path(p) }
   .detect { |p| File.directory?(p) }
+CT_SOURCES = File.join(CODE_PATH, 'concertim-sources')
 ANSIBLE_DIR="../ansible"
 MACHINES = [
   {
@@ -71,8 +72,8 @@ Vagrant.configure("2") do |config|
   MACHINES.each_with_index do |box, idx|
     config.vm.provider "virtualbox" do |v|
       # v.memory = 8192
-      # v.memory = 4096
-      v.memory = 3072
+      v.memory = 4096
+      # v.memory = 3072
       # v.memory = 2048
     end
 
@@ -92,8 +93,11 @@ Vagrant.configure("2") do |config|
 
       unless to_boolean(ENV['ACCEPTANCE'])
         v.vm.synced_folder ANSIBLE_DIR, "/ansible"
-        if File.directory?(CODE_PATH)
-          v.vm.synced_folder CODE_PATH, "/code"
+        # if File.directory?(CODE_PATH)
+        #   v.vm.synced_folder CODE_PATH, "/code"
+        # end
+        if File.directory?(CT_SOURCES)
+          v.vm.synced_folder CT_SOURCES, "/data/private/share/dev"
         end
 
         playbooks.each do |playbook|
