Reduce amount of demo data to (current) minimum
We need(?) to have a MIA appliance created (FSR?), so we create a single
rack with that device.  All other data is expected to be created via the
new rack/device API.

--- a/ansible/roles/demo-data/files/data.yaml
+++ b/ansible/roles/demo-data/files/data.yaml
@@ -1,567 +1,12 @@
-sensors:
-  - name: temp01
-    template_id: 678
-    sensor_type: temperature
-
-  - name: temp02
-    template_id: 678
-    sensor_type: temperature
-
-  - name: hum01
-    template_id: 678
-    sensor_type: humidity
-
-  - name: hum02
-    template_id: 678
-    sensor_type: humidity
-
-# XXX Add non-rack non-sensor devices.
+sensors: []
 non_rack_devices: []
 
 racks:
   - name: Rack-1
     u_height: 42
     template_id: 669
-
-    devices:
-      - name: switch01
-        template_id: 558
-        type: Switch
-        start_u: 41
-        facing: "b"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 24
-
-      - name: comp029
-        template_id: 613
-        type: Server
-        start_u: 39
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 23
-
-      - name: comp028
-        template_id: 613
-        type: Server
-        start_u: 38
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 22
-
-      - name: comp027
-        template_id: 613
-        type: Server
-        start_u: 37
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 21
-
-      - name: comp026
-        template_id: 613
-        type: Server
-        start_u: 36
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 20
-
-      - name: comp025
-        template_id: 613
-        type: Server
-        start_u: 35
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 19
-
-      - name: comp024
-        template_id: 613
-        type: Server
-        start_u: 34
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 18
-
-      - name: comp023
-        template_id: 613
-        type: Server
-        start_u: 33
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 17
-
-      - name: comp022
-        template_id: 613
-        type: Server
-        start_u: 32
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 16
-
-      - name: comp021
-        template_id: 613
-        type: Server
-        start_u: 31
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 15
-
-      - name: comp020
-        template_id: 613
-        type: Server
-        start_u: 30
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 14
-
-      - name: comp019
-        template_id: 613
-        type: Server
-        start_u: 29
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 13
-
-      - name: comp018
-        template_id: 613
-        type: Server
-        start_u: 28
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 12
-
-      - name: comp017
-        template_id: 613
-        type: Server
-        start_u: 27
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 11
-
-      - name: comp016
-        template_id: 613
-        type: Server
-        start_u: 26
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 10
-
-      - name: comp015
-        template_id: 613
-        type: Server
-        start_u: 25
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 9
-
-      - name: comp014
-        template_id: 613
-        type: Server
-        start_u: 24
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 8
-
-      - name: comp013
-        template_id: 613
-        type: Server
-        start_u: 23
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 7
-
-      - name: comp012
-        template_id: 613
-        type: Server
-        start_u: 22
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 6
-
-      - name: comp011
-        template_id: 613
-        type: Server
-        start_u: 21
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 5
-
-      - name: comp010
-        template_id: 613
-        type: Server
-        start_u: 20
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 4
-
-      - name: comp009
-        template_id: 613
-        type: Server
-        start_u: 19
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 3
-
-      - name: comp008
-        template_id: 613
-        type: Server
-        start_u: 18
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 2
-
-      - name: comp007
-        template_id: 613
-        type: Server
-        start_u: 17
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu01
-            socket: 1
-
-      - name: comp006
-        template_id: 613
-        type: Server
-        start_u: 16
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu02
-            socket: 23
-
-      - name: comp005
-        template_id: 613
-        type: Server
-        start_u: 15
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu02
-            socket: 22
-
-      - name: comp004
-        template_id: 613
-        type: Server
-        start_u: 14
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu02
-            socket: 21
-
-      - name: comp003
-        template_id: 613
-        type: Server
-        start_u: 13
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu02
-            socket: 20
-
-      - name: comp002
-        template_id: 613
-        type: Server
-        start_u: 12
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu02
-            socket: 19
-
-      - name: comp001
-        template_id: 613
-        type: Server
-        start_u: 11
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu02
-            socket: 18
-
-      - name: vdu01
-        template_id: 379
-        type: MiscellaneousDevice
-        start_u: 9
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu02
-            socket: 17
-
-      - name: ups01
-        template_id: 15
-        type: Server
-        start_u: 5
-        facing: "b"
-        psu_connections:
-          - name: psu0
-            pdu: pdu02
-            socket: 16
-
-      - name: storage01
-        template_id: 681
-        type: Server
-        start_u: 1
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu02
-            socket: 15
-
-    zero_u_devices:
-      - name: pdu01
-        template_id: 4
-        type: PowerStrip
-        location: top
-        facing: "b"
-        username: fake
-        password: fake
-
-      - name: pdu02
-        template_id: 4
-        type: PowerStrip
-        location: top
-        facing: "b"
-        username: fake
-        password: fake
-
-  - name: Rack-2
-    u_height: 42
-
-    devices:
-      - name: switch02
-        template_id: 558
-        type: Switch
-        start_u: 42
-        facing: "b"
-        psu_connections:
-          - name: psu0
-            pdu: pdu03
-            socket: 24
-
-      - name: "HP-Blade-03"
-        template_id: 172
-        type: Server
-        start_u: 32
-        facing: "f"
-
-        devices:
-          - name: comp049
-            template_id: 172
-            type: Server
-
-          - name: comp048
-            template_id: 172
-            type: Server
-
-          - name: comp047
-            template_id: 172
-            type: Server
-
-          - name: comp046
-            template_id: 172
-            type: Server
-
-          - name: comp045
-            template_id: 172
-            type: Server
-
-          - name: comp044
-            template_id: 172
-            type: Server
-
-      - name: "HP-Blade-02"
-        template_id: 172
-        type: Server
-        start_u: 26
-        facing: "f"
-
-        devices:
-          - name: comp043
-            template_id: 172
-            type: Server
-
-          - name: comp042
-            template_id: 172
-            type: Server
-
-      - name: "HP-Blade-01"
-        template_id: 172
-        type: Server
-        start_u: 20
-        facing: "f"
-
-        devices:
-          - name: comp041
-            template_id: 172
-            type: Server
-
-          - name: comp040
-            template_id: 172
-            type: Server
-
-      - name: comp039
-        template_id: 613
-        type: Server
-        start_u: 10
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu04
-            socket: 24
-
-      - name: comp038
-        template_id: 613
-        type: Server
-        start_u: 9
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu04
-            socket: 23
-
-      - name: comp037
-        template_id: 613
-        type: Server
-        start_u: 8
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu04
-            socket: 22
-
-      - name: comp036
-        template_id: 613
-        type: Server
-        start_u: 7
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu04
-            socket: 21
-
-      - name: comp035
-        template_id: 613
-        type: Server
-        start_u: 6
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu04
-            socket: 20
-
-      - name: comp034
-        template_id: 613
-        type: Server
-        start_u: 5
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu04
-            socket: 19
-
-      - name: comp033
-        template_id: 613
-        type: Server
-        start_u: 4
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu04
-            socket: 18
-
-      - name: comp032
-        template_id: 613
-        type: Server
-        start_u: 3
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu04
-            socket: 17
-
-      - name: comp031
-        template_id: 613
-        type: Server
-        start_u: 2
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu04
-            socket: 16
-
-      - name: comp030
-        template_id: 613
-        type: Server
-        start_u: 1
-        facing: "f"
-        psu_connections:
-          - name: psu0
-            pdu: pdu04
-            socket: 15
-
-    zero_u_devices:
-      - name: pdu03
-        template_id: 4
-        type: PowerStrip
-        location: top
-        facing: "b"
-        username: fake
-        password: fake
-
-      - name: pdu04
-        template_id: 4
-        type: PowerStrip
-        location: top
-        facing: "b"
-        username: fake
-        password: fake
+    devices: []
+    zero_u_devices: []
 
 data_centre:
   image_path: /ansible/roles/demo-data/files/data_center_background.png
@@ -574,32 +19,8 @@ data_centre:
       x_dim: 0.68
       y_dim: 1.18
 
-    - x_pos: 2.00
-      y_pos: 1.42
-      x_dim: 0.68
-      y_dim: 1.18
 
-  sensor_positions:
-    - x_pos: "2.85"
-      y_pos: "1.10"
-      x_dim: "0.07023411371237458"
-      y_dim: "0.07812470935748006"
-
-    - x_pos: "1.05"
-      y_pos: "2.85"
-      x_dim: "0.07023411371237458"
-      y_dim: "0.07812470935748006"
-
-    - x_pos: "1.05"
-      y_pos: "1.10"
-      x_dim: "0.07023411371237458"
-      y_dim: "0.07812470935748006"
-
-    - x_pos: "2.85"
-      y_pos: "2.85"
-      x_dim: "0.07023411371237458"
-      y_dim: "0.07812470935748006"
-
+  sensor_positions: []
 
 power_cost_bands:
   - name: 'Off peak (am)'
@@ -642,141 +63,5 @@ power_cost_bands:
       - 6
       - 7
 
-groups:
-  - name: "Devices with psu[0-1] metric"
-    metrics:
-      - {name: "ct.pdu.psu0.real_power", operator: "Exists"}
-      - {name: "ct.pdu.psu1.real_power", operator: "Exists"}
-
-  - name: "Devices with psu0 metric"
-    metrics:
-      - {name: "ct.pdu.psu0.real_power", operator: "Exists"}
-      - {name: "ct.pdu.psu1.real_power", operator: "Doesn't exist"}
-
-  - name: "Devices with user.calc.power.share metric"
-    metrics:
-      - {name: "user.calc.power.share", operator: "Exists"}
-
-inferred_metrics:
-  - name: "ct.calc.power.total"
-    unit: "W"
-    formula: "a"
-    tag: "SYSTEM"
-    metric_type: "power"
-    sources:
-      - type: Group
-        name: "Devices with psu0 metric"
-    dest:
-      type: Group
-      name: "Devices with psu0 metric"
-    keys:
-      - key: "a"
-        source: "a"
-        metric: "ct.pdu.psu0.real_power"
-
-  - name: "ct.calc.power.total"
-    unit: "W"
-    formula: "a + b"
-    tag: "SYSTEM"
-    metric_type: "power"
-    sources:
-      - type: Group
-        name: "Devices with psu[0-1] metric"
-    dest:
-      type: Group
-      name: "Devices with psu[0-1] metric"
-    keys:
-      - key: "a"
-        source: "a"
-        metric: "ct.pdu.psu0.real_power"
-      - key: "b"
-        source: "a"
-        metric: "ct.pdu.psu1.real_power"
-
-  - name: "ct.calc.power.total"
-    unit: "W"
-    formula: "a"
-    tag: "SYSTEM"
-    metric_type: "power"
-    sources:
-      - type: Group
-        name: "Devices with user.calc.power.share metric"
-    dest:
-      type: Group
-      name: "Devices with user.calc.power.share metric"
-    keys:
-      - key: "a"
-        source: "a"
-        metric: "user.calc.power.share"
-
-  - name: power.share
-    unit: "W"
-    formula: "a / (b / c)"
-    tag: "SYSTEM"
-    metric_type: "inferred"
-    sources:
-      - type: Group
-        name: "Devices in HP-Blade-01"
-      - type: Device
-        name: HP-Blade-01
-    dest:
-      type: Group
-      name: "Devices in HP-Blade-01"
-    keys:
-      - key: "a"
-        source: "b"
-        metric: "ct.calc.power.total"
-      - key: "b"
-        source: "a"
-        metric: "total(ct.snmp.load.1)"
-      - key: "c"
-        source: "a"
-        metric: "ct.snmp.load.1"
-
-  - name: power.share
-    unit: "W"
-    formula: "a / (b / c)"
-    tag: "SYSTEM"
-    metric_type: "inferred"
-    sources:
-      - type: Group
-        name: "Devices in HP-Blade-02"
-      - type: Device
-        name: HP-Blade-02
-    dest:
-      type: Group
-      name: "Devices in HP-Blade-02"
-    keys:
-      - key: "a"
-        source: "b"
-        metric: "ct.calc.power.total"
-      - key: "b"
-        source: "a"
-        metric: "total(ct.snmp.load.1)"
-      - key: "c"
-        source: "a"
-        metric: "ct.snmp.load.1"
-
-  - name: power.share
-    unit: "W"
-    formula: "a / (b / c)"
-    tag: "SYSTEM"
-    metric_type: "inferred"
-    sources:
-      - type: Group
-        name: "Devices in HP-Blade-03"
-      - type: Device
-        name: HP-Blade-03
-    dest:
-      type: Group
-      name: "Devices in HP-Blade-03"
-    keys:
-      - key: "a"
-        source: "b"
-        metric: "ct.calc.power.total"
-      - key: "b"
-        source: "a"
-        metric: "total(ct.snmp.load.1)"
-      - key: "c"
-        source: "a"
-        metric: "ct.snmp.load.1"
+groups: []
+inferred_metrics: []
