Installation of fake metrics is configurable

--- a/ansible/build-playbook.yml
+++ b/ansible/build-playbook.yml
@@ -54,5 +54,6 @@
       tags: appliance-dev
     - role: fake-gmond
       tags: fake-gmond
+      when: want_fake_metrics | bool
     - role: finalization
       tags: finalization
