--- a/ansible/roles/configure-vanilla/tasks/main.yml
+++ b/ansible/roles/configure-vanilla/tasks/main.yml
@@ -45,6 +45,16 @@
     - ftsw-users.rb
     - setup.sh
 
+- name: Copy FTSW data files
+  ansible.builtin.template:
+    src:  "{{ item }}"
+    dest: /data/private/share/etc/concurrent-thinking/appliance/
+    owner: root
+    group: "{{app_user}}"
+    mode: "640"
+  loop:
+    - ftsw-user-data.yml
+
 # Failures with the FTSW automation script can be complicated to debug.  The
 # following blocks provide more readable error messages should the script fail.
 - name: Run FTSW automation script
@@ -76,8 +86,8 @@
 - name: Configure users
   import_tasks: run_rails_runner.yml
   vars:
-    rails_runner: ./script/rails runner
+    rails_runner: ./bin/rails runner
     runner_args: /usr/local/sbin/ftsw-users.rb
-    ruby_bin_dir: "{{ruby_19_bin_dir}}"
+    ruby_bin_dir: "{{ruby_30_bin_dir}}"
     additional_env: ""
-    chdir: "{{rails_root_dir}}/emma/core"
+    chdir: "{{ rails_root_dir }}/ct-visualisation-app/core"
