Stop legacy services once configuration is complete

--- a/ansible/configure-playbook.yml
+++ b/ansible/configure-playbook.yml
@@ -6,6 +6,7 @@
   become_method: sudo
   vars:
     finalization_start_monit: true
+    finalization_stop_legacy_services: true
   roles:
     - role: configure-vanilla
       tags: configure-vanilla
