--- a/ansible/roles/ganglia/templates/gmetad.conf
+++ b/ansible/roles/ganglia/templates/gmetad.conf
@@ -42,21 +42,9 @@ scalable off
 # default: There is no default value
 # standard ganglia stream
 data_source "gmond" localhost
-# out-of-band IPMI and SNMP polling daemon
-data_source "demm_local" localhost:6666
-# metric aggregation and calculation daemon
-data_source "maggie_local" localhost:8765
-# power strip monitoring daemon
-data_source "postie_local" localhost:8655
-# sensor monitoring daemon
-data_source "senna_local" localhost:8656
-# appliance status daemon
-data_source "ailsa_local" localhost:8657
-# capacity planning daemon
-data_source "ct-capacity-daemon_local" localhost:8659
-# vm location daemon
-data_source "ct-hypervisor-daemon_local" localhost:8654
 # User-defined metric injection daemon
 data_source "metric-reporting-daemon_local" localhost:8678
 
-data_source fake_gmond localhost:8677
+{% if want_fake_metrics %}
+data_source "fake_gmond" localhost:8677
+{% endif %}
