--- a/ansible/roles/snmp/tasks/main.yml
+++ b/ansible/roles/snmp/tasks/main.yml
@@ -1,3 +1,8 @@
+- name: Install SNMP
+  ansible.builtin.apt:
+    name: snmp
+    state: latest
+
 - name: Create empty placeholder directories
   ansible.builtin.file:
     path: "{{ item }}"
