--- a/ansible/roles/webserver/templates/apache2/sites-available/redirect-http-to-https.conf
+++ b/ansible/roles/webserver/templates/apache2/sites-available/redirect-http-to-https.conf
@@ -11,7 +11,7 @@
 		allow from all
 		
 		# redirect to secure site
-		RedirectMatch ^/(.*)$ "https://command.appliance.local/$1"
+		RedirectMatch ^/(.*)$ "https://{{webserver_host_and_domain}}/$1"
 	</Directory>
 
 	ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
